--- a/.gitattributes
+++ b/.gitattributes
@@ -27,5 +27,5 @@ dp-p*			binary
 *.h5			binary
 *.hdf5			binary
 *.grb			binary
-*.grb2			binary# SCM syntax highlighting & preventing 3-way merges
+*.grb2			binary
 pixi.lock merge=binary linguist-language=YAML linguist-generated=true
